--- a/Rapport/1Chapters/2Requirements/Requirements.tex
+++ b/Rapport/1Chapters/2Requirements/Requirements.tex
@@ -1,51 +1,50 @@
 \chapter{Requirements} \label{ch:requirements}
-This chapter will post the requirements for the system described in \autoref{ch:overview}.  
-
-As described in \autoref{sec:problem_statement} the coil must not hit the backplate because this damages the loudspeaker significantly. To be able to secure this, the system must run in real time which is explained in \autoref{sec:RealTime}. However the delay of the full system must not be larger than 100 ms which is a delay a normal modern television today is able to delay the video with. This means that the system is not applicable with e.g. live music where the sound should not be delayed by more than maximum 20 ms, but only applicable with delayed video and normal audio listening. This leads to the following requirements for the overall system.
+As described in \autoref{sec:problem_statement} the coil must not hit the backplate because this damages the driver significantly. To be able to secure this, the system must run in real time. However the delay of the full system must not be larger than 100 ms which is a delay  a normal modern television today is able to delay the video with. This means that the system is not applicable with e.g. live music where the sound should not be delayed by more than maximum of 20 ms, but only applicable with delayed video and normal audio listening. This leads to the following requirements for the overall system.
 
 \begin{itemize}
 \item Overall system
 \begin{enumerate}
 \item [\textlabel{1}{coil}] The coil must not hit the backplate.\\
 \item [\textlabel{2}{realtime}] The system must run in real time. \\
-\item [\textlabel{3}{delay}] The system must not have a delay bigger than 100 ms.
+\item [\textlabel{3}{delay}] The system must not have a total delay bigger than 100 ms.
 \end{enumerate}
 \end{itemize}
 
-The processor has been chosen to be a DSP as explained in \autoref{sec:platformReq}. This section also explains all the requirements for the platform regarding, 96 kHz sample rate, 24 bit resolution, SNR of 120 dB, 100 MIPS and infacing through $I^2S$ to an ADC and DAC. However these demands would be considered necessary for a finish product but because of time constraints and the complexity of a system meeting theese requirements, the demands have been scaled to 48 kHz sample rate, 16 bit resolution, SNR of \textbf{XX} while maintaining infacing through $I^2S$ to an ADC and DAC. 
+The processor has been chosen to be a DSP as explained in \autoref{sec:platformReq}. This section also explains all the requirements for the platform regarding, 96 kHz sample rate, 24 bit resolution, SNR of 120 dB and infacing through $I^2S$ to an ADC and DAC. However these demands would be considered necessary for a finished product but because of time constraints and the complexity of a system meeting theese requirements, the demands have been scaled to 48 kHz sample rate, 16 bit resolution, SNR of 96 dB while maintaining interfacing through $I^2S$ to an ADC and DAC. 
 
-The hardware must also be able to meet the specifications of IEC 60268-15 which concerns specifications for an Hi-fi system which leads to the following requirements for the hardware platform.
+The hardware must also be able to meet the specifications of IEC 60268-15 which concerns specifications for an Hi-fi \todo{specificering af Standard} system which leads to the following requirements for the hardware platform.
 
 \begin{itemize}
 \item Hardware platform
 \begin{enumerate}
-\item [\textlabel{4}{samplerate44}] The sample rate of the audio codec must be at least 44.1 kHz.\\
+\item [\textlabel{4}{samplerate44}] The sample rate of the audio codec must be at least 48 kHz.\\
 \item [\textlabel{5}{samplerate96}] The sample rate of the audio codec must be compatible with 96 kHz.\\
-\item [\textlabel{6}{resolution}]  A bit resolution of 24 bit must supported by the audio codec and the DSP.\\
-\item [\textlabel{7}{I2S}] The DSP must have at least two I2S ports for interfacing with audio codec.\\
+\item [\textlabel{6}{resolution16}]  A bit resolution of  at least 16 bit must be supported by the audio codec.\\
+\item [\textlabel{7}{resolution}]  A bit resolution of 24 bit must be supported by the audio codec.\\
+\item [\textlabel{8}{I2S}] The DSP must have at least two $I^2S$ ports for interfacing with the audio codec.\\
 %\item [\textlabel{8}{MIPS}] The DSP must have at least 100 MIPS available.\todo{hmmmmmm den her vil sofus ikke kunne lide}\\
-\item [\textlabel{8}{IEC}] The interface must comply with IEC 60268-15 standard.
+\item [\textlabel{9}{IEC}] The interface must comply with IEC 60268-15 standard.
 \end{enumerate}
 \end{itemize}
 
 %The RMS compressor must have four bands which comply with the class 2 of IEC 6964 standard (2001) which descibed in \autoref{app:IEC6964}, the reason for class 2 is that it has the biggest tolerances for the filters which should be designed. These bands must be placed below 500 Hz which was desired by DALI which can me seen in (\textbf{MAIL correnspondance}) and is explained in (\textbf{Multiband vs single band section}). The system must also distort less than soft clipping which is fomulated in the problem statement seen in \autoref{sec:problem_statement} and argued for in \autoref{sec:PreAnalysisCon}.
 
-The RMS compressor must have a threshold at 150 W determined in \autoref{sec:hit_detect}. The compressor must have 4 bands which was determined by a listening test concerning single-band versus multi-band. These bands must also comply with the specifications of class 2 of IEC 6964. The reasoning for not meeting class 0 or class 1 requirements are because of time constraints, because it would require more tuning of the filters. The compressor shall only apply to frequencies below 500 Hz because frequencies over 500 Hz are not going to damage the loudspeaker by hitting the coil against the backplate. 
+The RMS limiter must have a threshold at 150 W determined in \autoref{sec:feedback}. The limiter must have 4 bands which was determined by a listening test concerning single-band versus multi-band. These bands must also comply with the specifications of class 2 of IEC 6964 (2001). The reasoning for not meeting class 0 or class 1 requirements are because of time constraints, because it would require more tuning of the filters. The limiter shall only apply to frequencies from and below 500 Hz, because frequencies above 500 Hz are not going to damage the driver by hitting the coil against the backplate. 
 
-Lastly the compressor must distort less than clipping because a limiter could just have been used instead of a compressor if the compressor distorts just as much. This leads to the following requirements for the RMS compressor.     
+Lastly the RMS limiter must distort less than clipping because a peak limiter could just have been used instead of an RMS limiter, if the RMS limiter distorts just as much. This leads to the following requirements for the RMS limiter.     
 
 \begin{itemize}
-\item RMS compressor
+\item RMS limiter
 \begin{enumerate}
-\item [\textlabel{9}{Threshold}] The compressor must have a threshold at 150 W.\\
-\item [\textlabel{10}{bands}] The compressor must have 4 bands.\\
-\item [\textlabel{11}{standardband}] The bands of the compressor must comply with the class 2 of IEC 6964 standard (2001).\\
-\item [\textlabel{12}{500below}] The compressor must apply to frequencies below 500 Hz.\\
-\item [\textlabel{13}{clipping}] The compressor must distort less than clipping.
+\item [\textlabel{10}{Threshold}] The limiter must have a threshold at 150 W.\\
+\item [\textlabel{11}{bands}] The limiter must have 4 bands.\\
+\item [\textlabel{12}{standardband}] The bands of the limiter must comply with class 2 of IEC 6964 standard (2001).\\
+\item [\textlabel{13}{500below}] The limiter must apply to frequencies from and below 500 Hz.\\
+\item [\textlabel{14}{clipping}] The limiter must distort less than clipping.
 \end{enumerate}
 \end{itemize}
 
-This conlcudes all the requirements for the system to be designed and implemented, fullfilling the problemstatement. 
+This conlcudes all the requirements for the system to be designed and implemented, fullfilling the problem statement. 
 %The requirements of this chapter will be the basis for the final system.
 %\todo[inline]{REFERENCER I CHAPTER}
 
