--- a/Rapport/1Chapters/2Requirements/Requirements.tex
+++ b/Rapport/1Chapters/2Requirements/Requirements.tex
@@ -1,5 +1,5 @@
 \chapter{Requirements} \label{ch:requirements}
-As described in \autoref{sec:problem_statement} the coil must not hit the backplate because this damages the driver significantly. To be able to secure this, the system must run in real time. However the delay of the full system must not be larger than 100 ms which is a delay  a normal modern television today is able to delay the video with. This means that the system is not applicable with e.g. live music where the sound should not be delayed by more than maximum of 20 ms, but only applicable with delayed video and normal audio listening. This leads to the following requirements for the overall system.
+As described in \autoref{sec:problem_statement} the coil must not hit the backplate because this damages the driver significantly. To be able to secure this, the system must run in real time. However the delay of the full system must not be larger than 100 ms which is a delay a normal modern television today is able to delay the video with \citep{sou:tvDelay}. This means that the system is not applicable with e.g. live music where the sound should not be delayed by more than of 25 ms \citep{sou:liveAudio}, but only applicable with delayed video and normal audio listening. This leads to the following requirements for the overall system.
 
 \begin{itemize}
 \item Overall system
