--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -88,7 +88,22 @@
   year = {2016},
 }
 
+@MISC{sou:tvDelay,
+  title = {Lip-sync error: Causes, solutions},
+  author = {Geoffrey Morrison},
+  note = {Downloaded May 23, 2016},
+  howpublished = {\url{http://www.cnet.com/news/lip-sync-error-causes-solutions/}},
+  year = {2016},
+}
 
+
+@MISC{sou:liveAudio,
+  title = {Living With Latency},
+  author = {Sam Inglis},
+  note = {Downloaded May 23, 2016},
+  howpublished = {\url{https://www.soundonsound.com/sos/jun07/articles/latency_0607.htm}},
+  year = {2016},
+}
 
 
 
