--- a/Rapport/1Chapters/RMS/RMSMAIN.tex
+++ b/Rapport/1Chapters/RMS/RMSMAIN.tex
@@ -1,31 +1,46 @@
-\chapter{RMS Compressor}\label{cha:CompressorDesign}
-This chapter will cover the design thoughts and considerations in designing the RMS compressor which will be used to suppress to large amplitude levels in the lower frequencies. 
-\vspace{2mm}
-From \autoref{app:journal_speaker_test2} It showed that the THD of the speaker increased as the amplitude is increased. It can be shown from figure \autoref{fig:com_micALLRMS} that the amplitude difference of the second and third harmonic has a decay correlating with an exponential decay. From these measurements it is possible to determine a given threshold were the speaker will perform with optimum conditions. 
-
-
+\chapter{RMS Limiter}\label{cha:CompressorDesign}
+The RMS limiter which will be used to suppress to large amplitude levels in the lower frequencies. 
+From \autoref{app:journal_speaker_test2} the trials showed that the THD of the drivers increased as the amplitude was increased. The difference between the fundamental tone and the harmonics decreased as the amplification throughout the system increased. Following up on the experiment, new trials were run with single sinusoids of different amplitudes. On figure \ref{fig:THDComparissonRMS} The different bands are showed in four individual graphs. Each graph shows specific single sinusoids where the THD is compared to RMS value of the input. The graphs shows different frequencies plotted. 
+%It can be shown from figure \autoref{fig:com_micALLRMS} that the amplitude difference of the second and third harmonic has a decay correlating with an exponential decay. From these measurements it is possible to determine a given threshold were the speaker will perform with optimum conditions. 
 
 \begin{figure}[H]
-\begin{subfigure}[t]{0.45\textwidth}
-    \centering
-    \tikzsetnextfilename{comp_mic12AllRMS}
-    \input{figures/comp_mic12AllRMS.tex}
-    \caption{1.harmonic / 2.harmonic pr. measurement. comparison for all frequencies}
-\label{fig:com_mic12AllRMS}
-\end{subfigure}
-\hspace{3mm}
-\begin{subfigure}[t]{0.45\textwidth}
-    \centering
-    \tikzsetnextfilename{comp_mic13AllRMS}
-    \input{figures/comp_mic13AllRMS.tex}
-    \caption{1.harmonic / 3.harmonic pr. measurement. comparison for all frequencies}
-\label{fig:com_mic13AllRMS}
-\end{subfigure}
-\caption{Comparison of amplitude level of the fundamental, sceond and third harmoinc.}
-\label{fig:com_micALLRMS}
-\end{figure}
+	\centering
+	\begin{subfigure}[t]{0.45\textwidth}
+		\centering
+		\tikzsetnextfilename{Band1Model}
+		\input{figures/Band1Model.tex}
+		\caption{Band 1 from 33 Hz to 66 Hz}
+		\label{fig:Band1ModelRMS}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.45\textwidth}
+		\centering
+		\tikzsetnextfilename{Band2Model}
+		\input{figures/Band2Model.tex}
+		\caption{Band 2 from 66 Hz to 132 Hz}
+		\label{fig:Band2ModelRMS}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.45\textwidth}
+		\centering
+		\tikzsetnextfilename{Band3Model}
+		\input{figures/Band3Model.tex}
+		\caption{Band 3 from 132 Hz to 265 Hz}
+		\label{fig:Band3ModelRMS}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.45\textwidth}
+		\centering
+		\tikzsetnextfilename{Band4Model}
+		\input{figures/Band4Model.tex}
+		\caption{Band 4 from 265 Hz to 530 Hz}
+		\label{fig:Band4ModelRMS}
+	\end{subfigure}
+	\caption{The different bands with single tone signals are plotted according to THD and amplifications.}
+	\label{fig:THDComparissonRMS}
+\end{figure} 
 
-In order to decrease to signal level in the lower bands a compressor will be used. The compressor will be utilizing an calculated RMS value to determine whether an attenuation should be applied. It is hence important to determine how much attenuation should be applied and how fast it should be applied. To determine how much attenuation there will be conducted trails to locate the must problematic frequencies and determine gain models, this is documented in \autoref{app:journal_speaker_test3}. From the models the needed attenuation is determined. This is further described in the following section
+In each figure the worst case scenario is chosen as basis for creating a model to describe the THD level according the RMS value. The RMS value in the graphs should på seen as 0 dBFS according to the DSP, meaning 1.0 RMS value correspond to a input of 0.5 $\text{V}_\text{RMS}$. The Preceding section will be covering the determination of the most suitable parameters. 
+
+
+%In order to decrease to signal level in the lower bands a compressor will be used. The compressor will be utilizing an calculated RMS value to determine whether an attenuation should be applied. It is hence important to determine how much attenuation should be applied and how fast it should be applied. To determine how much attenuation there will be conducted trails to locate the must problematic frequencies and determine gain models, this is documented in \autoref{app:journal_speaker_test3}. From the models the needed attenuation is determined. This is further described in the following section
 
 
 \input{1Chapters/RMS/Model.tex}
